# LucidRF

./: .gitignore  .prettierignore  .prettierrc  README.md  TODO.txt  docker-compose.yml  nx.json  opencode.json  package-lock.json  package.json  prometheus.yml  tsconfig.base.json
apps/ml-inference/: .dockerignore  .gitignore  Dockerfile  project.json  pyproject.toml  test_sizes.py
apps/ml-inference/models/: machine_a_logistic_v1.json
apps/ml-inference/src/lucidrf_inference/: cf32_le.py  (+11 more)
apps/ml-inference/tests/: test_cf32_le.py  test_detection_fixtures.py  test_features.py  test_fixture_generator.py  test_iq.py  test_main.py  test_overlap.py  test_pipeline_fixtures.py
apps/ml-inference/tools/: __init__.py
ml/: project.json  pyproject.toml
ml/models/: machine_a_logistic_v1.pkl
ml/notebooks/: 00_inspect_raw_bin.ipynb  00_inspect_raw_sdr_captures.ipynb  00_jamshield_analysis.ipynb  02_split_data.ipynb  03_prep_machine_a.ipynb  04_feature_analysis.ipynb  10_mat_to_npy.ipynb  20_extract_features.ipynb  21_visualize_dataset.ipynb  22_create_splits.ipynb  30_train_logistic_regression.ipynb  40_machine_a_evaluation.ipynb  EnvTest.ipynb  notebook-numbering-convention.md  prep_machine_a.ipynb  split_data.ipynb
ml/notebooks/U-net/: 10_hdf5_to_npy.ipynb  11_visualize_raw_data.ipynb  12_remove_dc_offset.ipynb  13_visualize_dc_offset.ipynb  14_create_split.ipynb  14_generate_barrage.ipynb  15_verify_barrage_physics.ipynb  16_create_split.ipynb  20_augmentation.ipynb  21_augmentation_visualization.ipynb  22_mix_training_data.ipynb  23_visulize_traning_mixed.ipynb  24_mix_evaluation_data.ipynb  25_visulize_evaluation_data.ipynb  26_global_scaling.ipynb  27_verify_scaling.ipynb  28_generate_final.ipynb  30-optuna-testing.ipynb  30_kaggle_train.ipynb  30_kaggle_unet_train.ipynb  40_machine_evaluation.ipynb
ml/notebooks/autoencoder/: 00_mit_dataset_loader.ipynb  10_dataset_generation.ipynb  10_dataset_generation_spot.ipynb  11_dataset_generation_barrage.ipynb  12_dataset_analysis_spot.ipynb  13_dataset_analysis_barrage.ipynb  20_dataset_analysis_spot.ipynb  21_dataset_analysis_barrage.ipynb  22_dataset_standardization.ipynb  30_model_design.ipynb  31_train_denoiser.ipynb  32_train_kaggle.ipynb
ml/notebooks/logistic_regression/: 00_jamshield_analysis.ipynb  01_jamshield_analysis.ipynb  01_verify_jamshield_mat_integrity.ipynb  03_verify_jamshield_mat_integrity.ipynb  10_mat_to_npy.ipynb  11_verify_npy_integrity.ipynb  20_extract_features.ipynb  21_visualize_dataset.ipynb  22_create_splits.ipynb  23_verify_splits.ipynb  30_train_logistic_regression.ipynb  31_train_custom_logistic_regression.ipynb  40_machine_a_evaluation.ipynb
ml/reports/: datasets_strategy.md  machine_a_handoff_report.md  report_11_1_26.md  report_20_1_26.md  report_4_2_26.md  report_7_1_26.md  report_8_1_26.md  report_8_2_26.md  report_9_2_26A.md  report_9_2_26B.md  training_logsv1.txt
ml/src/: analysis.py  clean_metadata_jamshield.py  config.py  earlystopping.py  features.py  mixing_utils.py  plotting.py  unet_dataset.py  unet_model.py
(+698 files in other folders)
