[project]
name = "lucidrf-ml"
version = "0.1.0"
description = "ML Pipeline for LucidRF"
authors = [
    {name = "Itamar"}
]
# readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "mat73 (>=0.65,<0.66)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.10.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "zenodo-get (>=2.0.0,<3.0.0)"
]
