[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidrf-inference"
version = "0.1.0"
description = "LucidRF ML inference pipeline (detection + denoising), transport-agnostic"
requires-python = ">=3.11,<3.15"
dependencies = [
  "numpy>=2.0.0,<3.0.0",
  "scipy>=1.14.0,<2.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "pandas>=2.2.0,<3.0.0",
  "joblib>=1.4.0,<2.0.0",
  "torch>=2.5.0,<3.0.0",
]

[project.optional-dependencies]
dev = []
fixtures = ["h5py>=3.0,<4.0"]

[tool.setuptools.packages.find]
where = ["src"]
