[project]
name = "lucidrf-inference"
version = "0.1.0"
description = "LucidRF ML inference pipeline (detection + denoising), transport-agnostic"
requires-python = ">=3.11,<3.15"
dependencies = [
  "numpy>=2.0.0,<3.0.0",
  "scipy>=1.14.0,<2.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "pandas>=2.2.0,<3.0.0",
  "joblib>=1.4.0,<2.0.0",
  "torch>=2.5.0,<3.0.0",
]

[project.optional-dependencies]
fixtures = ["h5py>=3.0,<4.0"]

[tool.poetry]
packages = [{ include = "lucidrf_inference", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
